# ev_betting_service

./: .gitignore  README.md  fetched_data.json  main.py  prd.md  pyproject.toml  uv-quickstart.sh
raw_responses/: crabsports_MLB_20250428_134329.json  crabsports_NBA_20250428_134329.json  crabsports_NHL_20250428_134331.json
src/calculation/: ev_calculator.py
src/config/: settings.py
src/logging/: setup.py
src/models/: comparison.py  data_models.py  enums.py  game.py  market.py  odds.py  team.py
src/normalization/: normalizer.py
src/scrapers/: base_scraper.py  crabsports_scraper.py  pinnacle_scraper.py
src/storage/: supabase_client.py
src/utils/: calcs.py  misc_utils.py
