[project]
name = "ev-betting-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "orjson>=3.10.16",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "supabase>=2.15.0",
    "tenacity>=9.1.2",
]
